src/objects/Forms__c.object
<CustomObject>
    <description>Created by Paul at Appirio initially for the ME Go - No-go approval form. Intention was to use same object with different fields and layouts if other forms were needed so that multiple objects did not need to be created.</description>
    <fields>
        <fullName>AECOM_Department__c</fullName>
        <formula>Opportunity__r.AECOM_Primary_Dept_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AECOM Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Opportunity__r.Account.Account_Manager__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Manager__c</fullName>
        <formula>Opportunity__r.Bid_Cost_Manager__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Proposal_Budget_from_opp__c</fullName>
        <formula>Opportunity__r.B_P_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid &amp; Proposal Budget from opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <formula>TEXT( Opportunity__r.Primary_Business_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMC_Email__c</fullName>
        <description>populated by a field update with email of person selected in the CMC field. used for alerts.</description>
        <label>CMC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMC__c</fullName>
        <inlineHelpText>To assign CMC resources</inlineHelpText>
        <label>CMC</label>
        <picklist>
            <picklistValues>
                <fullName>Maggie Walsh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucy Casey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samantha Rowles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capture_Manager_from_Opp__c</fullName>
        <formula>Opportunity__r.Capture_Manager__r.Name</formula>
        <inlineHelpText>Displays the capture manager from the Opportunity record.</inlineHelpText>
        <label>Capture Manager from Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted - must be removed from Approval Process first</description>
        <inlineHelpText>Role is Inform</inlineHelpText>
        <label>Client Account Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Cost_from_opp__c</fullName>
        <formula>Opportunity__r.Construction_cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Cost from opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Assessment_Comments__c</fullName>
        <inlineHelpText>Enter comments related to the cost assessment.</inlineHelpText>
        <label>Cost Assessment Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_and_Pricing_Data__c</fullName>
        <defaultValue>&quot;Provide cost and pricing data for the total contract and on an annual basis, if applicable.  Explain any deviations from usual pricing and the risks associated with the estimates along with an assessment of how those risks are to be avoided.  The analysis should include Labour, Fringe, Overhead, ODCs, G&amp;A, Contingency, Profit and (if applicable) Escalation and Tax Costs.  Include a cash flow analysis and highlight any unusual or unbudgeted capital requirements.&quot;+
&quot;The following information on cost and pricing data should be included in this section:&quot;+
&quot;-	Direct Labour DPE (also specify fringe rate)&quot;+
&quot;-	Overhead G&amp;A (also specify rate)&quot;+
&quot;-	Cost of Intercompany Subcontractor(s)&quot;+
&quot;-	Other Direct Costs&quot;+
&quot;-	Total Cost&quot;+
&quot;-	Contingencies&quot;+
&quot;-	Profit (also specify rate and base to which is applied)&quot;+  
&quot;-	Total Price&quot;+
&quot;-	Gross Margin %&quot;+
&quot;-	EBIT NSR %&quot;</defaultValue>
        <label>Cost and Pricing Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Business_Line_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted - must remove from approval process (or delete approval process) first.</description>
        <inlineHelpText>Role is Recommend</inlineHelpText>
        <label>Country Business Line Leader</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms4_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted. must be removed from approval process first.</description>
        <inlineHelpText>Role is Approve</inlineHelpText>
        <label>Country Managing Director</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Control__c</fullName>
        <label>Document Control</label>
        <picklist>
            <picklistValues>
                <fullName>alzeeera.Documentcontrollcentre@aecom.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dubaidc.middle@aecom.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dcc.alraha@aecom.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA_Chief_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted. must be removed from approval process first.</description>
        <inlineHelpText>Role is Decision, see DoA</inlineHelpText>
        <label>EMEA Chief Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enter_cost_and_pricing_data__c</fullName>
        <label>Enter cost and pricing data:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Construction_Value__c</fullName>
        <formula>Opportunity__r.Construction_cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Construction cost as entered on the opportunity. To change, edit the opportunity record and it will update here.</inlineHelpText>
        <label>Estimated Total Construction Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Weighted_Margin__c</fullName>
        <inlineHelpText>Enter estimated weighted margin</inlineHelpText>
        <label>Estimated Weighted Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY13_Market_Sector__c</fullName>
        <formula>Opportunity__r.End_Client_Sector__c</formula>
        <inlineHelpText>Inherited from the Opportunity record.</inlineHelpText>
        <label>End Client Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_A_Email__c</fullName>
        <description>Populated by field update with email of person selected in the F&amp;A pick list, used for email alert.</description>
        <label>F&amp;A Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F_A__c</fullName>
        <inlineHelpText>To assign B&amp;P number</inlineHelpText>
        <label>F&amp;A</label>
        <picklist>
            <picklistValues>
                <fullName>Cliff Fernandes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean Hamer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sue Higham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James O&apos;connor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rodrigo Zinampan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Get__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assessed likelihood of AECOM winning, as entered on the opportunity record. To change, open the opportunity and update it there - it will automatically update here.</inlineHelpText>
        <label>Get %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted. must be removed from approval process first.</description>
        <inlineHelpText>Role is Decision, see DoA</inlineHelpText>
        <label>Global Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Go__c</fullName>
        <formula>Opportunity__r.Go_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assessed likelihood of the project going ahead, as entered on the opportunity record. To change, open the opportunity and update it there - it will automatically update here.</inlineHelpText>
        <label>% Go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Fee__c</fullName>
        <formula>IF (CONTAINS ( Opportunity__r.RecordTypeText__c , &apos;Program&apos;), Opportunity__r.Ceiling_Amount_ReadOnly__c , 
Opportunity__r.Amount
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Programs, displays Ceiling Amount entered on the opportunity record. 
For Projects and Task Orders, displays Gross AECOM Contract Revenue.
To update, revise the related opportunity record.</inlineHelpText>
        <label>Gross Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Credit_Check_Complete__c</fullName>
        <label>Is Credit Check Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Email__c</fullName>
        <description>Populated by field update with email of person selected in the Legal pick list, used for email alert.</description>
        <label>Legal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <inlineHelpText>To review contract, if appropriate</inlineHelpText>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Malcolm Haack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_Risk_Criteria_on_myAECOM__c</fullName>
        <defaultValue>&apos;http://my.aecomnet.com/Intranet/About/Technical+Excellence/IMS/PDS/1+Proposal/2+Go+-+No+Go&apos;</defaultValue>
        <inlineHelpText>Click to go the the risk criteria document</inlineHelpText>
        <label>Link to Risk Criteria on myAECOM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MEFO205_Notification_Recipient__c</fullName>
        <label>MEFO205 Notification Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>alzeeera.documentcontrollcentre@aecom.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dubaidc.middle@aecom.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dcc.alraha@aecom.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maggie.walsh@aecom.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ME_Business_Line_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted. must be removed from approval process first.</description>
        <inlineHelpText>Role is Decision</inlineHelpText>
        <label>ME Business Line Leader</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms3_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ME_Region_Market_Sector_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can be deleted - must be removed from Approval Process first</description>
        <inlineHelpText>Role is Inform</inlineHelpText>
        <label>ME Region Market Sector Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Fee__c</fullName>
        <formula>IF ( Contains (Opportunity__r.RecordTypeText__c, &apos;Program&apos;),
Opportunity__r.Net_Revenue_Program__c , 
Opportunity__r.Net_Revenue_TO_Project__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Programs, displays Ceiling Amount minus Subs/Other Revenue.
For Projects and Task Orders, displays Gross AECOM Contract Revenue minus Subs/Other Revenue.</inlineHelpText>
        <label>Net Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_TO_Project__c</fullName>
        <formula>Opportunity__r.Net_Revenue_TO_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue (TO/Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_TO_Project_from_opp__c</fullName>
        <formula>Opportunity__r.Net_Revenue_TO_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue (TO/Project) from opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Note_to_Approvers__c</fullName>
        <inlineHelpText>This note will be sent with the approval workflow.</inlineHelpText>
        <label>Note to Approvers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <description>Generic notification email address for use in other notifications for the Forms application</description>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Assessment__c</fullName>
        <inlineHelpText>This section should comprise an overall assessment of the risks associated with the proposed course of action and the steps taken to mitigate those risks, as well as those risks that cannot be alleviated, but were considered in making your recommendation.</inlineHelpText>
        <label>Overall Risk Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_probability_of_win__c</fullName>
        <formula>Opportunity__r.Go_Probability__c  *  Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: % Go X % Get</inlineHelpText>
        <label>Overall probability of win</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <formula>Opportunity__r.Project_Director__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <formula>Opportunity__r.Project_City__c &amp; &quot;, &quot; &amp; TEXT(Opportunity__r.ProjectCountry__c)</formula>
        <inlineHelpText>Inherited from Project City and Project Country on Opportunity. To update, edit the opportunity record.</inlineHelpText>
        <label>Project Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_and_End_Dates__c</fullName>
        <formula>TEXT (Opportunity__r.Estimated_work_start_date__c)  &amp; &quot; to &quot; &amp;  TEXT (Opportunity__r.Work_end_date_del__c)</formula>
        <inlineHelpText>Work start and end dates from opportunity. To adjust, edit opportunity record.</inlineHelpText>
        <label>Project Start and End Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Number__c</fullName>
        <formula>Opportunity__r.Bid_Proposal_Charge__c</formula>
        <inlineHelpText>From &apos;Bid and Proposal Charge Number&apos; field on opportunity. To correct, edit the opportunity record.</inlineHelpText>
        <label>Proposal Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Submission_Date__c</fullName>
        <formula>Opportunity__r.Submittal_Date_Proposal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Date_Expected__c</fullName>
        <formula>Opportunity__r.Date_RFP_expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Date Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_Legal__c</fullName>
        <label>Reviewed by Legal Counsel?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <inlineHelpText>For  L or M, all criterial must be satisfied. Refer to Risk Criteria R3ME-501-GL1.
If level is H, Regional Director and BL Leader approvals are required and a detailed risk assessment must be submitted to the Middle East ORM for approval.</inlineHelpText>
        <label>Risk Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subs_Fee__c</fullName>
        <formula>Opportunity__r.Subs_Other_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Subs/Other Revenue value from Opportunity. To revise, update the opportunity record and it will update automatically here.</inlineHelpText>
        <label>Subs Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subs_Other_Revenue_from_opp__c</fullName>
        <formula>Opportunity__r.Subs_Other_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subs/Other Revenue from opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <inlineHelpText>Are there are unusual or contingent payment terms or working capital needs/requirements, or delayed or diluted payment terms?</inlineHelpText>
        <label>5-3. Terms of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weighted_Net_Fee__c</fullName>
        <formula>Opportunity__r.Net_Forecast_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overall probability of win x Net Fee</inlineHelpText>
        <label>Weighted Net Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X10_Repeat_client__c</fullName>
        <inlineHelpText>Is the opportunity with a repeat client?</inlineHelpText>
        <label>10. Repeat client?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X11_Well_defined_project_brief__c</fullName>
        <inlineHelpText>Does the Client have a well-defined project brief?</inlineHelpText>
        <label>11. Well-defined project brief?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X12_Selection_process_reasonable__c</fullName>
        <inlineHelpText>Is the Client&apos;s selection process reasonable, i.e., quality vs fee vs skills vs schedule?
If ‘No’, please provide initial strategy below.  If ‘Unknown’, describe strategy for determining selection process below.</inlineHelpText>
        <label>12. Selection process reasonable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X12a_selection_process_exp__c</fullName>
        <inlineHelpText>If the answer to Question 12 was ‘No’, provide initial strategy here.
If the answer was ‘Unknown’, describe strategy for determining selection process here.</inlineHelpText>
        <label>12a. Selection process explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X13a_Is_there_an_incumbent__c</fullName>
        <inlineHelpText>Are there existing competitive consultants involved on the project? 
If &apos;Yes&apos; also answer question 13b.</inlineHelpText>
        <label>13a. Is there an incumbent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X13b_Will_client_replace_incumbent__c</fullName>
        <inlineHelpText>If the answer to Qustion 13a is ‘Yes’, is the client likely to replace the incumbent consultant?</inlineHelpText>
        <label>13b. Will client replace incumbent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X14_Client_financial_status_capability__c</fullName>
        <inlineHelpText>Describe the cleint&apos;s financial status and capability here. Enter notes in the &apos;Notes and Attachements&apos; related list if necessary.</inlineHelpText>
        <label>14. Client financial status &amp; capability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X15_Has_client_done_this_type_of_work__c</fullName>
        <inlineHelpText>Has the client engaged in this type of work prior to this project?</inlineHelpText>
        <label>15 Has client done this type of work?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X16_Describe_client_s_litigation_history__c</fullName>
        <inlineHelpText>Add notes and/or attachements if necessary in the related list linked to this form.</inlineHelpText>
        <label>16. Describe client&apos;s litigation history</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X17_Has_AECOM_had_other_loss_w_client__c</fullName>
        <inlineHelpText>Has AECOM incurred financial or other losses or iimpacts wtih this client before?</inlineHelpText>
        <label>17. Has AECOM had $/other loss w/client?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X18_Is_client_open_to_2_way_relat__c</fullName>
        <inlineHelpText>Is the client open to developing a &apos;two-way&apos; business relationship?</inlineHelpText>
        <label>18. Is client open to 2-way relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X19a_Have_we_done_this_work_before__c</fullName>
        <inlineHelpText>Has our office done this type of work before?</inlineHelpText>
        <label>19a. Have we done this work before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X19b_Has_the_proposed_team_done_this__c</fullName>
        <inlineHelpText>Has the proposed project team done this type of work before?</inlineHelpText>
        <label>19b. Has the proposed team done this?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1a_Services_to_a_tenderer_or_novation__c</fullName>
        <inlineHelpText>Does the project have elements of services to a tenderer (Design &amp; Construct/Design &amp; Build (D&amp;C)) or novation of services? If &apos;No&apos;, go to Question 2.</inlineHelpText>
        <label>1a. Services to a tenderer or novation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1b_Approved_rep_on_Go_No_go_Team__c</fullName>
        <inlineHelpText>Does the Go - No-go team include a representative approved by a SVP for D&amp;C proposals under the Delegations of Authority?
If &apos;No&quot;, then the process must stop until the required representative of a SVP is included in the team. Provide an explanation below</inlineHelpText>
        <label>1b. Approved rep on Go - No-go Team?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1b_Explanation__c</fullName>
        <inlineHelpText>If answer to 1b is no, enter an explanation.</inlineHelpText>
        <label>1b. Explanation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X20_Are_subs_required_for_this_job__c</fullName>
        <inlineHelpText>Are subcontractors or subconsultants required for this job?
If ‘Yes’, please answer Question 20a below.</inlineHelpText>
        <label>20. Are subs required for this job?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X20a_Are_subs_acceptable_agreeable__c</fullName>
        <inlineHelpText>If the answer to Question 20 was ‘Yes’, are the subs acceptable and agreeable to work for us as well as appear in our Subs Register?</inlineHelpText>
        <label>20a. Are subs acceptable/agreeable?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X21_Can_we_meet_the_client_schedule__c</fullName>
        <inlineHelpText>Can we meet the Client’s timeframe/work schedule?</inlineHelpText>
        <label>21. Can we meet the client schedule?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>